# aerothemeplasma

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  INSTALL.md  README.md  compile.sh  install.sh  install_plasma_components.sh  install_plasmoids.sh  migration-uninstall.sh  uninstall.sh
misc/: CMakeLists.txt
misc/kvantum/: CMakeLists.txt
misc/xdg/: CMakeLists.txt  kcm-about-distrorc  kcminputrc  kdeglobals  klaunchrc  kscreenlockerrc  ksplashrc  kwinrc
misc/xdg/autostart/: x-atpootb.desktop
plasma/: CMakeLists.txt
plasma/atpootb/: CMakeLists.txt  config.h.cmake  install.sh  kauth.actions
plasma/atpootb/src/: CMakeLists.txt  app.cpp  app.h  atpootbconfig.kcfg  atpootbconfig.kcfgc  effectsmodel.cpp  effectsmodel.h  main.cpp  ootbauthhelper.cpp  ootbauthhelper.h
plasma/atpootb/src/contents/ui/: Main.qml  assets.qrc
plasma/color_scheme/: CMakeLists.txt
plasma/desktoptheme/: CMakeLists.txt
plasma/layout-templates/: CMakeLists.txt
plasma/look-and-feel/: CMakeLists.txt
plasma/look-and-feel/authui7/contents/: defaults
plasma/look-and-feel/authui7/contents/logout/: Logout.qml
plasma/look-and-feel/authui7/contents/splash/: Splash.qml
plasma/plasmoids/: CMakeLists.txt
plasma/plasmoids/io.gitgud.wackyideas.SevenStart/contents/ui/: MenuRepresentation.qml  StartOrb.qml
plasma/plasmoids/io.gitgud.wackyideas.desktopcontainment/contents/config/: config.qml  main.xml
plasma/plasmoids/io.gitgud.wackyideas.desktopcontainment/contents/ui/: ConfigWatermark.qml  FolderItemDelegate.qml  FolderView.qml  Watermark.qml  WatermarkConfigure.qml
plasma/plasmoids/io.gitgud.wackyideas.digitalclocklite/contents/ui/: DigitalClock.qml
plasma/plasmoids/io.gitgud.wackyideas.seventasks/contents/ui/: Badge.qml  Task.qml  main.qml
plasma/plasmoids/io.gitgud.wackyideas.seventasks/contents/ui/svgs/: badge.svgz
plasma/plasmoids/io.gitgud.wackyideas.win7showdesktop/contents/ui/: PeekController.qml
plasma/plasmoids/src/: CMakeLists.txt
plasma/plasmoids/src/notifications_src/notifications/: FullRepresentation.qml
plasma/plasmoids/src/sevenstart_src/: CMakeLists.txt
plasma/plasmoids/src/sevenstart_src/src/: CMakeLists.txt
plasma/plasmoids/src/seventasks_src/src/: seventasks.cpp  seventasks.h
plasma/plasmoids/src/volume_src/: CMakeLists.txt
plasma/sddm/: CMakeLists.txt
plasma/sddm/login-sessions/: startatp-wayland.cmake  startatp.cmake
plasma/shells/: CMakeLists.txt
plasma/shells/io.gitgud.wackyideas.desktop/contents/configuration/: ConfigurationContainmentAppearance.qml
plasma/shells/io.gitgud.wackyideas.desktop/contents/views/: DesktopEditMode.qml
